--- a/godtools/Views/GTHomeView.xib
+++ b/godtools/Views/GTHomeView.xib
@@ -40,12 +40,9 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4aU-XN-vmw">
-                            <rect key="frame" x="21" y="16" width="92" height="38"/>
-                            <state key="normal" image="GT4_HomeScreen_Pull_Icon_">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_HomeScreen_Pull_Icon_" translatesAutoresizingMaskIntoConstraints="NO" id="mQA-yC-87K">
+                            <rect key="frame" x="62" y="27" width="11" height="14"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
@@ -55,6 +52,15 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK1-HD-VKf">
+                    <rect key="frame" x="247" y="-8" width="80" height="62"/>
+                    <state key="normal" image="GT4_HomeScreen_SettingsIcon_">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="8N5-pI-EwH"/>
+                    </connections>
+                </button>
                 <view alpha="0.74999999999999978" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D6h-DG-TNe">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
@@ -70,15 +76,6 @@
                     </subviews>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK1-HD-VKf">
-                    <rect key="frame" x="247" y="-8" width="80" height="62"/>
-                    <state key="normal" image="GT4_HomeScreen_SettingsIcon_">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="8N5-pI-EwH"/>
-                    </connections>
-                </button>
             </subviews>
             <connections>
                 <outlet property="iconImageView" destination="jLQ-YV-T02" id="ulA-Nk-cy1"/>
