--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -42,7 +42,7 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
-                            <action selector="showTranslatorOptionsButtonPressed:" destination="IOb-6t-RhA" eventType="touchUpInside" id="RZD-6Z-7fq"/>
+                            <action selector="translatorOptionsButtonPressed:" destination="IOb-6t-RhA" eventType="touchUpInside" id="d5P-p8-bHn"/>
                         </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GT4_HomeScreen_DraftGripC_" translatesAutoresizingMaskIntoConstraints="NO" id="2ke-fL-aSe">
