--- a/godtools/Base.lproj/Main.storyboard
+++ b/godtools/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OvA-bH-obN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OvA-bH-obN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -88,7 +88,7 @@
                                 <rect key="frame" x="0.0" y="266" width="375" height="52"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="GT4_SettingsScreen_ButtonBar15%_Orange_" translatesAutoresizingMaskIntoConstraints="NO" id="Hra-57-Rjx">
-                                <rect key="frame" x="0.0" y="474" width="375" height="52"/>
+                                <rect key="frame" x="0.0" y="480" width="375" height="52"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MsA-3e-8Np">
                                 <rect key="frame" x="30" y="135" width="274" height="21"/>
@@ -101,7 +101,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3LE-oe-ngK">
-                                <rect key="frame" x="251" y="484" width="51" height="31"/>
+                                <rect key="frame" x="251" y="490" width="51" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="rGU-k3-vAh"/>
                                     <constraint firstAttribute="width" constant="49" id="xnA-Am-HkI"/>
@@ -111,7 +111,7 @@
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rdm-Ei-0uu">
-                                <rect key="frame" x="30" y="474" width="213" height="52"/>
+                                <rect key="frame" x="30" y="480" width="213" height="52"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="4sC-rV-kaI"/>
                                 </constraints>
@@ -161,23 +161,30 @@
                                     <action selector="changeParallelLanguagePressed" destination="oIQ-32-exZ" eventType="touchUpInside" id="MKw-Wc-R2y"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tap screen during presentation to view menu." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3d-nf-ctT">
-                                <rect key="frame" x="16" y="326" width="288" height="48"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*Tap screen during presentation to view menu." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3d-nf-ctT">
+                                <rect key="frame" x="16" y="326" width="288" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Will toggle the 2 languages" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loZ-lY-U87">
-                                <rect key="frame" x="54" y="363" width="250" height="48"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Will toggle the 2 languages" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loZ-lY-U87">
+                                <rect key="frame" x="56" y="360" width="244" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="244" id="sRz-TV-FtV"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Package_PopUpToolBar_Icon_Switch.png" translatesAutoresizingMaskIntoConstraints="NO" id="h78-CO-cwP">
+                            <imageView userInteractionEnabled="NO" contentMode="center" verticalHuggingPriority="251" image="Package_PopUpToolBar_Icon_Switch.png" translatesAutoresizingMaskIntoConstraints="NO" id="h78-CO-cwP">
                                 <rect key="frame" x="16" y="372" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="QJP-u0-m8u"/>
+                                    <constraint firstAttribute="height" constant="30" id="toa-p7-2Y0"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="The toggle button will not show up in the menu if the booklet is not available in the parallel language" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lB-eD-M5X">
-                                <rect key="frame" x="16" y="403" width="288" height="63"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The toggle button will not show up in the menu if the booklet is not available in the parallel language" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lB-eD-M5X">
+                                <rect key="frame" x="16" y="410" width="288" height="54"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -185,29 +192,41 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="h78-CO-cwP" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" id="05d-4S-rob"/>
                             <constraint firstItem="JKp-5o-V3H" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Hra-57-Rjx" secondAttribute="bottom" constant="20" id="1rq-MS-4se"/>
                             <constraint firstAttribute="trailing" secondItem="3LE-oe-ngK" secondAttribute="trailing" constant="20" symbolic="YES" id="2Hq-Eg-TsR"/>
                             <constraint firstItem="cW2-xI-6th" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="-16" id="2LG-zH-SWN"/>
                             <constraint firstItem="B77-rt-eeN" firstAttribute="height" secondItem="cW2-xI-6th" secondAttribute="height" id="33h-4g-xIS"/>
                             <constraint firstItem="Hra-57-Rjx" firstAttribute="top" secondItem="yMd-4c-vb1" secondAttribute="bottom" priority="750" constant="156" id="4dJ-Es-1d6"/>
+                            <constraint firstItem="5lB-eD-M5X" firstAttribute="trailing" secondItem="dbd-kT-ndl" secondAttribute="trailingMargin" id="5ET-r2-La9"/>
+                            <constraint firstItem="loZ-lY-U87" firstAttribute="trailing" secondItem="3LE-oe-ngK" secondAttribute="trailing" id="5WZ-AZ-1uN"/>
+                            <constraint firstItem="O3d-nf-ctT" firstAttribute="top" secondItem="CL7-HZ-wpT" secondAttribute="bottom" constant="8" id="5uk-vU-GRM"/>
                             <constraint firstItem="B77-rt-eeN" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="-16" id="7vz-oM-1eQ"/>
+                            <constraint firstItem="O3d-nf-ctT" firstAttribute="trailing" secondItem="dbd-kT-ndl" secondAttribute="trailingMargin" id="F7T-b7-XLW"/>
+                            <constraint firstItem="5lB-eD-M5X" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" id="FEm-PA-aWb"/>
                             <constraint firstItem="B77-rt-eeN" firstAttribute="top" secondItem="cW2-xI-6th" secondAttribute="top" id="GKW-sg-rIb"/>
                             <constraint firstItem="yMd-4c-vb1" firstAttribute="top" secondItem="B77-rt-eeN" secondAttribute="bottom" priority="750" constant="50" id="I2f-V3-MsX"/>
+                            <constraint firstItem="Rdm-Ei-0uu" firstAttribute="top" secondItem="loZ-lY-U87" secondAttribute="bottom" constant="66" id="NH4-PL-GfA"/>
                             <constraint firstItem="Yop-JO-bK0" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="14" id="NkA-Jc-izL"/>
                             <constraint firstItem="CL7-HZ-wpT" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="-16" id="O50-BK-KUC"/>
+                            <constraint firstItem="h78-CO-cwP" firstAttribute="top" secondItem="CL7-HZ-wpT" secondAttribute="bottom" constant="54" id="Usl-DG-1N9"/>
                             <constraint firstItem="CL7-HZ-wpT" firstAttribute="top" secondItem="yMd-4c-vb1" secondAttribute="top" id="VZM-BJ-5vq"/>
                             <constraint firstItem="3LE-oe-ngK" firstAttribute="centerY" secondItem="Hra-57-Rjx" secondAttribute="centerY" constant="-0.5" id="Vzf-Uc-z6L"/>
                             <constraint firstItem="Rdm-Ei-0uu" firstAttribute="height" secondItem="Hra-57-Rjx" secondAttribute="height" id="WmO-tC-Xeo"/>
                             <constraint firstItem="Hra-57-Rjx" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="-16" id="X8T-3i-exG"/>
                             <constraint firstItem="Rdm-Ei-0uu" firstAttribute="top" secondItem="Hra-57-Rjx" secondAttribute="top" id="XZp-6G-jxT"/>
+                            <constraint firstItem="O3d-nf-ctT" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" id="YyZ-nC-m2i"/>
                             <constraint firstItem="Rdm-Ei-0uu" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="14" id="eFK-qi-xhg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rdm-Ei-0uu" secondAttribute="trailing" constant="61" id="hQs-si-nJR"/>
+                            <constraint firstItem="5lB-eD-M5X" firstAttribute="top" secondItem="h78-CO-cwP" secondAttribute="bottom" constant="8" id="ht7-eP-Yu3"/>
                             <constraint firstItem="yMd-4c-vb1" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="-16" id="iH6-X0-q0v"/>
+                            <constraint firstItem="loZ-lY-U87" firstAttribute="centerY" secondItem="h78-CO-cwP" secondAttribute="centerY" id="jY6-ha-ODp"/>
                             <constraint firstItem="CL7-HZ-wpT" firstAttribute="height" secondItem="yMd-4c-vb1" secondAttribute="height" id="mPz-eb-xfv"/>
                             <constraint firstItem="yMd-4c-vb1" firstAttribute="top" secondItem="Yop-JO-bK0" secondAttribute="bottom" constant="8" id="rFb-cf-SRq"/>
                             <constraint firstItem="MsA-3e-8Np" firstAttribute="leading" secondItem="dbd-kT-ndl" secondAttribute="leadingMargin" constant="14" id="sf4-HB-Nee"/>
                             <constraint firstItem="B77-rt-eeN" firstAttribute="top" secondItem="VMF-Qq-7PC" secondAttribute="bottom" priority="250" constant="100" id="uak-2n-YaK"/>
                             <constraint firstItem="B77-rt-eeN" firstAttribute="top" secondItem="MsA-3e-8Np" secondAttribute="bottom" constant="8" id="w7l-VX-Nof"/>
+                            <constraint firstItem="loZ-lY-U87" firstAttribute="top" secondItem="CL7-HZ-wpT" secondAttribute="bottom" constant="42" id="ytt-km-bNN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5kU-if-Z1Q"/>
